# ufmg

./: .gitignore
2_semester/discreta/tp/: README.md
2_semester/pds2/tp/: README.md  makefile  sources.mk
3_semester/alc/praticas/: README.md
3_semester/ed/tp1/: .project  README.md
3_semester/ed/tp2/: CMakeLists.txt  Cell.cpp  Cell.hpp  Insertionsort.cpp  Quicksort.cpp  README.md  Stack.cpp  Stack.hpp  Utils.hpp  main.cpp  results.txt  results2.txt  results3.txt  results4.txt
3_semester/ed/tp2/Jean_Evangelista/jean_evangelista/src/: Insertionsort.hpp  Makefile  Quicksort.hpp  Utils.cpp
3_semester/ed/tp3/: CMakeLists.txt  Code.cpp  Code.hpp  Node.cpp  Node.hpp  README.md  Tree.cpp  main.cpp
3_semester/isl/tp4/: README.md
4_semester/alg1/tp1/: Edge.cpp  Edge.hpp  Graph.cpp  Graph.hpp  Makefile  Member.cpp  Member.hpp  Node.cpp  Node.hpp  README.md  main.cpp  tp1
4_semester/alg1/tp2/: Graph.cpp  Ilha.cpp  Ilha.hpp  Makefile  README.md  Viagem.cpp  Viagem.hpp  main.cpp  tp2
4_semester/alg1/tp3/: Makefile  README.md  Sudoku.cpp  Sudoku.hpp  main.cpp  tp3
4_semester/ibd/tp1/: 2018047021.csv  despesas_publicas_tp1.sql  tp1.db  tp1.ipynb
5_semester/engsoft1/java_implementation/: Construtora.java
6_semester/alg2/tp1/: .gitignore  1000kb.txt  10kb.txt  1kb.txt  2mb.txt  500kb.txt  750kb.txt  compressed.z78  input1.z78  main.py  node.py  rand.z78  readme.md  test.sh  (+2 more)
6_semester/implementation/: client.c  server.c
7_semester/tp1/: tp1.m
7_semester/tp2/: TP2BioInf.m  calculateDist.m  dist.mat  generateSolution.m  result.mat
8_semester/pdmn/: TP2.ipynb
(+399 files in other folders)
